--- a/modules/life_billing_collective_fr/locale/fr_FR.po
+++ b/modules/life_billing_collective_fr/locale/fr_FR.po
@@ -2,37 +2,9 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:billing.rate_line:"
-msgid "This item (%s) is used by %s (%s, %s)"
-msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
-
-msgctxt "error:collective.fare_class:"
-msgid "This item (%s) is used by %s (%s, %s)"
-msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
-
-msgctxt "error:collective.fare_class_group-fare_class:"
-msgid "This item (%s) is used by %s (%s, %s)"
-msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
-
-msgctxt "error:collective.fare_class_group:"
-msgid "This item (%s) is used by %s (%s, %s)"
-msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
-
-msgctxt "error:collective.rating_rule:"
-msgid "This item (%s) is used by %s (%s, %s)"
-msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
-
 msgctxt "error:collective.rating_rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
-
-msgctxt "error:collective.rating_rule_by_tranche:"
-msgid "This item (%s) is used by %s (%s, %s)"
-msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
-
-msgctxt "error:collective.sub_rating_rule:"
-msgid "This item (%s) is used by %s (%s, %s)"
-msgstr "Cet élément (%s) est utilisé par %s (%s, %s)"
 
 msgctxt "field:billing.rate_line,childs:"
 msgid "Childs"
@@ -69,10 +41,6 @@ msgstr "ID"
 msgctxt "field:billing.rate_line,index:"
 msgid "Index"
 msgstr "indice"
-
-msgctxt "field:billing.rate_line,is_used:"
-msgid "Is Used"
-msgstr "Est Utilisé"
 
 msgctxt "field:billing.rate_line,must_expand_tree:"
 msgid "Must Expand Tree"
@@ -134,10 +102,6 @@ msgctxt "field:collective.fare_class,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:collective.fare_class,is_used:"
-msgid "Is Used"
-msgstr "Est Utilisé"
-
 msgctxt "field:collective.fare_class,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
@@ -177,10 +141,6 @@ msgstr "Classe Tarif"
 msgctxt "field:collective.fare_class_group,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:collective.fare_class_group,is_used:"
-msgid "Is Used"
-msgstr "Est Utilisé"
 
 msgctxt "field:collective.fare_class_group,must_expand_tree:"
 msgid "Must Expand Tree"
@@ -222,10 +182,6 @@ msgctxt "field:collective.fare_class_group-fare_class,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:collective.fare_class_group-fare_class,is_used:"
-msgid "Is Used"
-msgstr "Est Utilisé"
-
 msgctxt "field:collective.fare_class_group-fare_class,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -262,10 +218,6 @@ msgctxt "field:collective.rating_rule,index:"
 msgid "Index"
 msgstr "indice"
 
-msgctxt "field:collective.rating_rule,is_used:"
-msgid "Is Used"
-msgstr "Est Utilisé"
-
 msgctxt "field:collective.rating_rule,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
@@ -273,10 +225,6 @@ msgstr "Must Expand Tree"
 msgctxt "field:collective.rating_rule,offered:"
 msgid "Offered"
 msgstr "Offre"
-
-msgctxt "field:collective.rating_rule,rates_by_tranche:"
-msgid "Rate by Tranche"
-msgstr "Taux par Tranche"
 
 msgctxt "field:collective.rating_rule,rating_kind:"
 msgid "Rating Kind"
@@ -293,10 +241,6 @@ msgstr "Moteur de Règle"
 msgctxt "field:collective.rating_rule,rule_complementary_data:"
 msgid "Rule Complementary Data"
 msgstr "Paramètres de Rêgle"
-
-msgctxt "field:collective.rating_rule,simple_rate:"
-msgid "Rate"
-msgstr "Taux"
 
 msgctxt "field:collective.rating_rule,start_date:"
 msgid "From Date"
@@ -326,58 +270,6 @@ msgctxt "field:collective.rating_rule,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:collective.rating_rule_by_tranche,config_kind:"
-msgid "Conf. kind"
-msgstr "Type de Conf."
-
-msgctxt "field:collective.rating_rule_by_tranche,create_date:"
-msgid "Create Date"
-msgstr "Date de création"
-
-msgctxt "field:collective.rating_rule_by_tranche,create_uid:"
-msgid "Create User"
-msgstr "Créé par"
-
-msgctxt "field:collective.rating_rule_by_tranche,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:collective.rating_rule_by_tranche,is_used:"
-msgid "Is Used"
-msgstr "Est Utilisé"
-
-msgctxt "field:collective.rating_rule_by_tranche,main_rating_rule:"
-msgid "Main Rating Rule"
-msgstr "Principale Règle de Tarif"
-
-msgctxt "field:collective.rating_rule_by_tranche,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
-msgctxt "field:collective.rating_rule_by_tranche,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:collective.rating_rule_by_tranche,rule:"
-msgid "Rule"
-msgstr "Règle"
-
-msgctxt "field:collective.rating_rule_by_tranche,simple_rate:"
-msgid "Rate"
-msgstr "Taux"
-
-msgctxt "field:collective.rating_rule_by_tranche,tranche:"
-msgid "Tranche"
-msgstr "Tranche"
-
-msgctxt "field:collective.rating_rule_by_tranche,write_date:"
-msgid "Write Date"
-msgstr "Date de mise à jour"
-
-msgctxt "field:collective.rating_rule_by_tranche,write_uid:"
-msgid "Write User"
-msgstr "Mis à jour par"
-
 msgctxt "field:collective.sub_rating_rule,config_kind:"
 msgid "Conf. kind"
 msgstr "Type de Conf."
@@ -401,10 +293,6 @@ msgstr "Cotisation Groupe de Tarif"
 msgctxt "field:collective.sub_rating_rule,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:collective.sub_rating_rule,is_used:"
-msgid "Is Used"
-msgstr "Est Utilisé"
 
 msgctxt "field:collective.sub_rating_rule,main_rating_rule:"
 msgid "Main Rating Rule"
@@ -482,10 +370,6 @@ msgctxt "model:collective.rating_rule,name:"
 msgid "Collective Rating Rule"
 msgstr "Règle de Tarification Collective"
 
-msgctxt "model:collective.rating_rule_by_tranche,name:"
-msgid "Tranche Rating Rule"
-msgstr "Règle de Tarif par Tranche"
-
 msgctxt "model:collective.sub_rating_rule,name:"
 msgid "Sub Rating Rule"
 msgstr ""
@@ -531,10 +415,6 @@ msgid "by Fare Class"
 msgstr "par Classe Tarifaire"
 
 msgctxt "selection:collective.rating_rule,rating_kind:"
-msgid "by Index"
-msgstr "Par Indice"
-
-msgctxt "selection:collective.rating_rule,rating_kind:"
 msgid "by Tranche"
 msgstr "Par Tranche"
 
@@ -549,14 +429,6 @@ msgstr "Compléter"
 msgctxt "selection:collective.rating_rule,template_behaviour:"
 msgid "Remove"
 msgstr "Remplacer"
-
-msgctxt "selection:collective.rating_rule_by_tranche,config_kind:"
-msgid "Advanced"
-msgstr "Avancé"
-
-msgctxt "selection:collective.rating_rule_by_tranche,config_kind:"
-msgid "Simple"
-msgstr "Simple"
 
 msgctxt "selection:collective.sub_rating_rule,config_kind:"
 msgid "Advanced"
@@ -573,6 +445,10 @@ msgstr ""
 msgctxt "view:billing.rate_line:"
 msgid "Rate Line"
 msgstr "Ligne de Tarif"
+
+msgctxt "view:billing.rate_note_process_parameters:"
+msgid "Rate Note Process Parameters"
+msgstr ""
 
 msgctxt "view:collective.fare_class:"
 msgid "Fare Class"
