--- a/modules/process/locale/fr_FR.po
+++ b/modules/process/locale/fr_FR.po
@@ -14,10 +14,6 @@ msgctxt "error:process.process_desc:"
 msgid "The technical name must be unique"
 msgstr "Le nom technique doit être unique"
 
-msgctxt "error:process.process_framework:"
-msgid "Everything is good !"
-msgstr "Tout est bon!"
-
 msgctxt "error:process.step_desc:"
 msgid "The technical name must be unique"
 msgstr "Le nom technique doit être unique"
@@ -611,6 +607,14 @@ msgid "==> Affiliations"
 msgstr ""
 
 msgctxt "view:contract.contract:"
+msgid "==> Choix des personnes couvertes"
+msgstr ""
+
+msgctxt "view:contract.contract:"
+msgid "==> Choix du souscripteur"
+msgstr ""
+
+msgctxt "view:contract.contract:"
 msgid "==> Commission"
 msgstr ""
 
@@ -619,7 +623,7 @@ msgid "==> Cotisations"
 msgstr ""
 
 msgctxt "view:contract.contract:"
-msgid "==> Documents"
+msgid "==> Document Request"
 msgstr ""
 
 msgctxt "view:contract.contract:"
@@ -627,15 +631,11 @@ msgid "==> Garanties"
 msgstr ""
 
 msgctxt "view:contract.contract:"
-msgid "==> Personnes Couvertes"
+msgid "==> Options Selection"
 msgstr ""
 
 msgctxt "view:contract.contract:"
 msgid "==> Populations"
-msgstr ""
-
-msgctxt "view:contract.contract:"
-msgid "==> Produit"
 msgstr ""
 
 msgctxt "view:contract.contract:"
@@ -695,6 +695,14 @@ msgid "Calculer les Taux"
 msgstr ""
 
 msgctxt "view:contract.contract:"
+msgid "Choix des personnes couvertes"
+msgstr "Personnes Couvertes"
+
+msgctxt "view:contract.contract:"
+msgid "Choix du souscripteur"
+msgstr "Produit"
+
+msgctxt "view:contract.contract:"
 msgid "Commission"
 msgstr "Commission"
 
@@ -719,6 +727,10 @@ msgid "Covered Elements/Options"
 msgstr "Eléments Couverts/Garanties"
 
 msgctxt "view:contract.contract:"
+msgid "Document Request"
+msgstr "Documents"
+
+msgctxt "view:contract.contract:"
 msgid "Documents"
 msgstr "Documents"
 
@@ -735,8 +747,8 @@ msgid "Options"
 msgstr "Garanties"
 
 msgctxt "view:contract.contract:"
-msgid "Personnes Couvertes"
-msgstr "Personnes Couvertes"
+msgid "Options Selection"
+msgstr "Garanties"
 
 msgctxt "view:contract.contract:"
 msgid "Populations"
@@ -749,10 +761,6 @@ msgstr "Précédent"
 msgctxt "view:contract.contract:"
 msgid "Processus de souscription individuel"
 msgstr "Processus de souscription individuel"
-
-msgctxt "view:contract.contract:"
-msgid "Produit"
-msgstr "Produit"
 
 msgctxt "view:contract.contract:"
 msgid "Prêt"
@@ -781,12 +789,6 @@ msgstr "Processus Terminé. Commencez une nouvelle tâche"
 msgctxt "view:contract.contract:"
 msgid ""
 "The current record isin a state (Validation de l'avenant) that you are not "
-"allowed to view."
-msgstr ""
-
-msgctxt "view:contract.contract:"
-msgid ""
-"The current record isin a state (Validation du contrat) that you are not "
 "allowed to view."
 msgstr ""
 
@@ -861,10 +863,6 @@ msgstr "Déclarant"
 msgctxt "view:ins_claim.claim:"
 msgid "Déclaration de Sinistre"
 msgstr "Déclaration de Sinistre"
-
-msgctxt "view:ins_claim.claim:"
-msgid "Losses"
-msgstr "Préjudices"
 
 msgctxt "view:ins_claim.claim:"
 msgid "Next"
